# dr-drafts-mycosearch

./: .gitignore  CONTRIBUTING.md  COUCHDB_INTEGRATION.md  INSTALL.md  MANIFEST.in  PACKAGE_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  build-deb.sh  build_index.sh  env.yml  main.py  pyproject.toml  raw  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.py  stdeb.cfg  test.sh
debian/: copyright  postinst  postinst.template  prerm  prerm.template
prompts/: cortinarius.sh
src/: JUPYTER_USAGE.md  __init__.py  build_index.py  cli.py  compute_embeddings.py  data.py  example_couchdb_usage.py  get_skol.sh  sota_search.py  test_compute_embeddings.py  test_data.py
